--- a/src/Css/post_card.css
+++ b/src/Css/post_card.css
@@ -1,28 +1,31 @@
-.card-container{
+.card-container {
     width: 60%;
     margin: 20px;
     background-color: rgb(52, 51, 51);
     border-radius: 10px;
     padding: 10px;
-    
-}
-.saved:hover svg {
-    fill: rgb(60, 229, 221); 
+
 }
 
-.head-container{
+.saved:hover svg {
+    fill: rgb(60, 229, 221);
+}
+
+.head-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10px;
 }
-.card-content{
+
+.card-content {
     margin-left: 40px;
     color: rgb(225, 225, 225);
     padding: 10px;
     text-align: justify;
 }
-.post-feed{
+
+.post-feed {
     display: flex;
     align-items: center;
     color: white;
@@ -30,33 +33,40 @@
     padding-bottom: 10px;
 
 }
-.feed-box{
+
+.feed-box {
     background-color: rgb(120, 117, 117);
     padding: 6px;
     border-radius: 10px;
     margin-right: 5px;
-}
-.post-feed p {
-    display: flex;
-    align-items: center;
-    margin-right: 20px;
+
 }
 
-.card-container:hover{
+.post-feed p {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* margin-right: 20px; */
+}
+
+.card-container:hover {
     background-color: rgb(72, 72, 72);
     cursor: pointer;
 }
-.user-name{
+
+.user-name {
     color: rgba(255, 255, 255, 0.792);
     margin-left: 10px;
 }
-.post-date{
+
+.post-date {
     color: rgb(117, 115, 115);
     margin-left: 10px;
 }
-.image-container{
-    width:100%;
-    height:300;
-    border-radius: 10px;  
+
+.image-container {
+    width: 100%;
+    height: 300;
+    border-radius: 10px;
     margin-top: 20px;
 }
