--- a/src/Css/adminlogin.css
+++ b/src/Css/adminlogin.css
@@ -56,3 +56,18 @@
   display: none;
 }
 
+.error {
+  color: red;
+}
+
+.error-pop-up {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: red;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
