--- a/src/Css/addadmin.css
+++ b/src/Css/addadmin.css
@@ -12,28 +12,28 @@ body {
 }
 
 .wrapper {
-    
+
 	width: 100%;
 	height: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-    
+
 }
 
 .login-box {
-    background-color: #263043;
-		width: 300px;
-		height: 400px;
-		box-shadow: 5px 5px 5px 1px rgba(0,0,0,0.1);
-		text-align: center;
-		padding: 20px;
+	background-color: #263043;
+	width: 300px;
+	height: 400px;
+	box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.1);
+	text-align: center;
+	padding: 20px;
 }
 
 .form-container {
 	display: flex;
 	flex-direction: column;
-	
+
 }
 
 .form-container .input-addon {
@@ -46,7 +46,7 @@ body {
 	border: 1px solid #d2d6de;
 	padding: 5px;
 	font-size: .9rem;
-	position: relative	;
+	position: relative;
 }
 
 .form-element:focus {
@@ -71,7 +71,7 @@ body {
 	display: flex;
 }
 
-.input-addon > .form-element {
+.input-addon>.form-element {
 	margin-top: 0;
 }
 
@@ -89,13 +89,13 @@ body {
 }
 
 
-.popupregister{
+.popupregister {
 
 	width: 500px;
 	height: 20%;
 	border-radius: 10px;
 	background-color: white;
-	
+
 }
 
 
@@ -109,12 +109,14 @@ body {
 	transition: opacity 500ms;
 	visibility: hidden;
 	opacity: 0;
-  }
-  .overlay:target {
+}
+
+.overlay:target {
 	visibility: visible;
 	opacity: 1;
-  }
-  .popup {
+}
+
+.popup {
 	margin: 70px auto;
 	padding: 20px;
 	background: #fff;
@@ -122,8 +124,9 @@ body {
 	width: 30%;
 	position: relative;
 	transition: all 2s ease-in-out;
-  }
-  .popup .close {
+}
+
+.popup .close {
 	position: absolute;
 	top: 20px;
 	right: 30px;
@@ -132,14 +135,15 @@ body {
 	font-weight: bold;
 	text-decoration: none;
 	color: #333;
-  }
-  .popup .content {
+}
+
+.popup .content {
 	max-height: 30%;
 	overflow: auto;
-  }
+}
 
 
-  .button {
+.button {
 	display: inline-block;
 	padding: 10px 20px;
 	background-color: #007bff;
@@ -150,12 +154,12 @@ body {
 	text-align: center;
 	text-decoration: none;
 	font-size: 16px;
-  }
-  
-  .button:hover {
+}
+
+.button:hover {
 	background-color: #0056b3;
-  }
-  
-  .button:active {
+}
+
+.button:active {
 	background-color: #004080;
-  }
+}
